    - Set MODULE_SIG_ALL to sign all modules.
    - Not longer request Secure Boot signing for modules.
    - Don't trust Secure Boot key any longer.
  * Sign modules and support lockdown always.
  * Compress all modules:
    - Set MODULE_COMPRESS_XZ.
  * Drop deprecated build profile stage1. (closes: #1051365)
  * Generate information for signed template package early.

  [ Emanuele Rocca ]
  * [arm64] Enable support for Renesas RZ/G2UL (ARCH_R9A07G043), RZ/V2L
    (ARCH_R9A07G054), and RZ/V2M (ARCH_R9A09G011). (Closes: #1053503)

  [ Salvatore Bonaccorso ]
  * drivers/block: Enable BLK_DEV_UBLK as module (Closes: #1032604)

  [ Uwe Kleine-König ]
  * Enable support for TI DP83TD510 Ethernet 10Base-T1L PHY

  [ Diederik de Haas ]
  * Drop patches applied upstream:
    - Drop "cpupower: Bump soname version"
  * Refresh patches:
    - Adjust context in "Tweak gitignore for Debian pkg-kernel using git" and
      drop 'svn' from patch Subject
    - Adjust context in "linux-tools: Install perf-read-vdso{,x}32 in
      directory under /usr/lib"
    - Adjust context in "Documentation: Drop sphinx version check"
    - Adjust context in "firmware: Remove redundant log messages from drivers"
    - Adjust context in "radeon, amdgpu: Firmware is required for DRM and KMS
      on R600 onward"
    - Adjust context in "phy/marvell: disable 4-port phys"
    - Adjust context in "fs: Add MODULE_SOFTDEP declarations for hard-coded
      crypto drivers"
    - Adjust context in "efi: Add an EFI_SECURE_BOOT flag to indicate secure
      boot mode"
    - Adjust context in "trust machine keyring (MoK) by default"
    - Adjust context in "ntfs: mark it as broken"
  * d/config: Update with the help of kconfigeditor2:
    - [x86,amd64/cloud] arch/x86: Remove MICROCODE
    - init: Remove EMBEDDED
    - drivers/hwmon: Remove SENSORS_SMM665
    - [armhf] drivers/staging/media/imx: Merge VIDEO_IMX_CSI into
      VIDEO_IMX_MEDIA
  * libcpupower1: Add is_valid_path to symbols file