@@ -4,25 +4,25 @@
 # glibc doesn't seem to check for a PT_GNU_STACK section in vDSOs, so
 # it's OK that they don't have it
 {% if arch in ['arm64', 'armhf'] %}
-{{package}}: shared-library-lacks-stack-section *usr/lib/debug/lib/modules/{{abiname}}{{localversion}}/vdso/vdso.so*
+{{package}}: shared-library-lacks-stack-section *usr/lib/debug/lib/modules/*/vdso/vdso.so*
 {% endif %}
 {% if arch in ['amd64', 'arm64', 'i386', 'ppc64el', 's390x'] %}
-{{package}}: shared-library-lacks-stack-section *usr/lib/debug/lib/modules/{{abiname}}{{localversion}}/vdso/vdso32.so*
+{{package}}: shared-library-lacks-stack-section *usr/lib/debug/lib/modules/*/vdso/vdso32.so*
 {% endif %}
 {% if arch in ['amd64', 'ppc64el', 's390x'] %}
-{{package}}: shared-library-lacks-stack-section *usr/lib/debug/lib/modules/{{abiname}}{{localversion}}/vdso/vdso64.so*
+{{package}}: shared-library-lacks-stack-section *usr/lib/debug/lib/modules/*/vdso/vdso64.so*
 {% endif %}
 {% if arch in ['amd64'] %}
-{{package}}: shared-library-lacks-stack-section *usr/lib/debug/lib/modules/{{abiname}}{{localversion}}/vdso/vdsox32.so*
+{{package}}: shared-library-lacks-stack-section *usr/lib/debug/lib/modules/*/vdso/vdsox32.so*
 {% endif %}
 
 # It is intended that 64-bit kernels provide vDSOs for 32-bit executables.
 # lintian currently allows i386 executables on amd64.
 {% if arch in ['arm64', 'ppc64el', 's390x'] %}
-{{package}}: binary-from-other-architecture *usr/lib/debug/lib/modules/{{abiname}}{{localversion}}/vdso/vdso32.so*
+{{package}}: binary-from-other-architecture *usr/lib/debug/lib/modules/*/vdso/vdso32.so*
 {% endif %}
 {% if arch in ['amd64'] %}
-{{package}}: binary-from-other-architecture *usr/lib/debug/lib/modules/{{abiname}}{{localversion}}/vdso/vdsox32.so*
+{{package}}: binary-from-other-architecture *usr/lib/debug/lib/modules/*/vdso/vdsox32.so*
 {% endif %}
 
 # Some 32-bit architectures need 64-bit kernels and we still build
